--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 #Mod
 mod_version=1.0
 mod_group=fr.minemobs.minemobstemplate
-mod_id=minemobs-template
+mod_id=minemobstemplate
 mod_name=Minemobs Template
 mod_author=minemobs
 mod_icon=examplemod.png
