--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'org.spongepowered.mixin'
 
 group = 'fr.minemobs'
 version = '1.0-SNAPSHOT'
-archivesBaseName = 'minemobs-template'
+archivesBaseName = 'minemobstemplate'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
 
@@ -31,7 +31,7 @@ minecraft {
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            arg "-mixin.config=minemobs-template.mixins.json"
+            arg "-mixin.config=minemobstemplate.mixins.json"
 
             mods {
                 minemobstemplate {
@@ -44,7 +44,7 @@ minecraft {
             workingDirectory project.file('run')
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            arg "-mixin.config=minemobs-template.mixins.json"
+            arg "-mixin.config=minemobstemplate.mixins.json"
 
             mods {
                 minemobstemplate {
@@ -69,7 +69,7 @@ minecraft {
 }
 
 mixin {
-    add sourceSets.main, "minemobs-template.refmap.json"
+    add sourceSets.main, "minemobstemplate.refmap.json"
 }
 
 sourceSets.main.resources { srcDir 'src/generated/resources' }
@@ -120,7 +120,7 @@ jar {
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.version,
                 "Implementation-Vendor"   : "minemobs",
-                "MixinConfigs"            : "minemobs-template.mixins.json",
+                "MixinConfigs"            : "minemobstemplate.mixins.json",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
