--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,24 +3,24 @@ loaderVersion="[36,)" #mandatory This is typically bumped every Minecraft versio
 license="MIT"
 #issueTrackerURL="https://github.com/Minemobs/x/issues" #optional
 [[mods]]
-modId="minemobs-template" #mandatory
+modId="minemobstemplate" #mandatory
 version="${file.jarVersion}" #mandatory
 displayName="Minemobs Template" #mandatory
 #updateJSONURL="http://myurl.me/" #optional
 #displayURL="http://example.com/" #optional
-#logoFile="minemobs-template.png" #optional
+#logoFile="minemobstemplate.png" #optional
 credits="" #optional
 authors="minemobs" #optional
 description='''
 A template for minemobs's forge mods
 '''
-[[dependencies.minemobs-template]] #optional
+[[dependencies.minemobstemplate]] #optional
    modId="forge" #mandatory
    mandatory=true #mandatory
    versionRange="[36,)" #mandatory
    ordering="NONE"
    side="BOTH"
-[[dependencies.minemobs-template]]
+[[dependencies.minemobstemplate]]
    modId="minecraft"
    mandatory=true
    versionRange="[1.16.5,1.17)"
